--- a/http_server1/index.html
+++ b/http_server1/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>TEST This is Server1 </title></head>
+<head><title>This is Server1 </title></head>
 <body>
 Congratulations! <br/>
 Your router successfully route your packets to server1. <br/>
